--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -360,6 +360,7 @@ footer .footer-below {
     display: inline-block;
     width: 50px;
     height: 50px;
+    background: white;
     border: 2px solid #fff;
     border-radius: 100%;
     text-align: center;
